--- a/SiGotvime (Web)/Views/Home/Contact.cshtml
+++ b/SiGotvime (Web)/Views/Home/Contact.cshtml
@@ -5,8 +5,9 @@
 
 
 <address>
-    <strong>Информации:</strong>   <a href="javascript:void(0)">info@sigotvime.mk</a><br />
-    <strong>Маркетинг:</strong> <a href="javascript:void(0)">marketing@sigotvime.mk</a>
+    <strong>Контакт:</strong>   <a href="javascript:void(0)">contact@sigotvime.mk</a><br />
+    <strong>Маркетинг:</strong> <a href="javascript:void(0)">marketing@sigotvime.mk</a><br />
+    <strong>За ваши рецепти:</strong> <a href="javascript:void(0)">recept@sigotvime.mk</a>
 </address>
 
 <div class="wrap clearfix">
