--- a/SiGotvime (Web)/Content/style.css
+++ b/SiGotvime (Web)/Content/style.css
@@ -16,7 +16,7 @@ iframe{max-width:100%;}
 .foot		{float:left;width:100%;}
 .wrap 		{margin:0 auto;width:1170px;text-align:left;position:relative;max-width:96%;}
 
-.row			 {margin:0 -15px;}
+.row			 {margin:15px -15px;}
 .full-width 	 	 {float:left;width:100%;padding:0 15px 30px;max-width:100%;}
 .three-fourth 	 {float:left;width:75%;padding:0 15px 30px;max-width:100%;}
 .one-half		 {float:left;width:50%;padding:0 15px 30px;max-width:100%;}
@@ -215,6 +215,129 @@ tr:nth-child(2n+1) td{background:#f6f6f6;}
 
 .button.medium 	{font-size:16px !important;font-weight:700 !important;text-transform:none;}
 .button.big		{font-size:18px !important;font-weight:700 !important;text-transform:none;}
+
+.tooltip {
+  position: absolute;
+  z-index: 1030;
+  display: block;
+  font-size: 12px;
+  line-height: 1.4;
+  opacity: 0;
+  filter: alpha(opacity=0);
+  visibility: visible;
+  max-width: 200px;
+}
+.tooltip.in {
+  opacity: 0.9;
+  filter: alpha(opacity=90);
+}
+
+
+.tooltip.top {
+  padding: 5px 0;
+  margin-top: -3px;
+}
+
+
+.tooltip.right {
+  padding: 0 5px;
+  margin-left: 3px;
+}
+
+
+.tooltip.bottom {
+  padding: 5px 0;
+  margin-top: 3px;
+}
+
+
+.tooltip.left {
+  padding: 0 5px;
+  margin-left: -3px;
+}
+
+
+.tooltip-inner {
+  max-width: 200px;
+  padding: 3px 8px;
+  color: #ffffff;
+  text-align: center;
+  text-decoration: none;
+  background-color: #000000;
+  border-radius: 4px;
+}
+
+.bootstrap-item .tooltip-arrow {
+    position: absolute;
+    width: 0;
+    height: 0;
+    border-color: transparent;
+    border-style: solid;
+}
+
+.tooltip.top .tooltip-arrow {
+  bottom: 0;
+  left: 50%;
+  margin-left: -5px;
+  border-top-color: #000000;
+  border-width: 5px 5px 0;
+}
+
+
+.tooltip.top-left .tooltip-arrow {
+  bottom: 0;
+  left: 5px;
+  border-top-color: #000000;
+  border-width: 5px 5px 0;
+}
+
+
+.tooltip.top-right .tooltip-arrow {
+  right: 5px;
+  bottom: 0;
+  border-top-color: #000000;
+  border-width: 5px 5px 0;
+}
+
+
+.tooltip.right .tooltip-arrow {
+  top: 50%;
+  left: 0;
+  margin-top: -5px;
+  border-right-color: #000000;
+  border-width: 5px 5px 5px 0;
+}
+
+
+.tooltip.left .tooltip-arrow {
+  top: 50%;
+  right: 0;
+  margin-top: -5px;
+  border-left-color: #000000;
+  border-width: 5px 0 5px 5px;
+}
+
+.tooltip.bottom .tooltip-arrow {
+  top: 0;
+  left: 50%;
+  margin-left: -5px;
+  border-bottom-color: #000000;
+  border-width: 0 5px 5px;
+}
+
+.tooltip.bottom-left .tooltip-arrow {
+  top: 0;
+  left: 5px;
+  border-bottom-color: #000000;
+  border-width: 0 5px 5px;
+}
+
+.tooltip.bottom-right .tooltip-arrow {
+  top: 0;
+  right: 5px;
+  border-bottom-color: #000000;
+  border-width: 0 5px 5px;
+}
 
 /*HOME*/
 .home .main 	{padding-top:0;}
