--- a/SiGotvime (Web)/Views/Blog/GetPost.cshtml
+++ b/SiGotvime (Web)/Views/Blog/GetPost.cshtml
@@ -15,9 +15,9 @@
     <!--breadcrumbs-->
     <nav class="breadcrumbs">
         <ul>
-            <li><a href="index.html" title="Home">Home</a></li>
-            <li><a href="#" title="Blog">Blog</a></li>
-            <li>Post</li>
+            <li><a href="@Url.Action("Index","Home")" title="Home">Дома</a></li>
+            <li><a href="@Url.Action("Index","Blog")" title="Blog">Статии</a></li>
+            <li>@Model.Title</li>
         </ul>
     </nav>
     <!--//breadcrumbs-->
