--- a/SiGotvime (Web)/Views/Blog/Index.cshtml
+++ b/SiGotvime (Web)/Views/Blog/Index.cshtml
@@ -23,8 +23,8 @@
     <!--breadcrumbs-->
     <nav class="breadcrumbs">
         <ul>
-            <li><a href="index.html" title="Home">Home</a></li>
-            <li>Blog</li>
+            <li><a href="@Url.Action("Index","Home")" title="Home">Дома</a></li>
+            <li>Статии</li>
         </ul>
     </nav>
     <!--//breadcrumbs-->
