--- a/SiGotvime (Web)/Views/Recipe/Search.cshtml
+++ b/SiGotvime (Web)/Views/Recipe/Search.cshtml
@@ -21,8 +21,8 @@
     <!--breadcrumbs-->
     <nav class="breadcrumbs">
         <ul>
-            <li><a href="index.html" title="Home">Home</a></li>
-            <li>Search for Recipes</li>
+            <li><a href="@Url.Action("Index","Home")" title="Home">Дома</a></li>
+            <li>Пребарај рецепти</li>
         </ul>
     </nav>
     <!--//breadcrumbs-->
