--- a/SiGotvime (Web)/Views/Recipe/Search.cshtml
+++ b/SiGotvime (Web)/Views/Recipe/Search.cshtml
@@ -101,7 +101,7 @@
                         <div class="entry one-third wow fadeInLeft">
                             <figure>
                                 <img src="@(!string.IsNullOrWhiteSpace(item.CroppedUrl)?item.CroppedUrl:item.ImageUrl)" alt="" class="imageFullSize" />
-                                <figcaption><a href="@Url.Action("GetRecipe", "Recipe", new { id = item.ID})"><i class="ico i-view"></i> <span>View recipe</span></a></figcaption>
+                                <figcaption><a href="@Url.Action("GetRecipe", "Recipe", new { id = item.ID})"><i class="ico i-view"></i> <span>Погледни го рецептот</span></a></figcaption>
                             </figure>
                             <div class="container">
                                 <h2><a href="@Url.Action("GetRecipe", "Recipe", new { id = item.ID})">@item.Title</a></h2>
