Fixed Create Recipe; Created UserBlogPosts in Profile

--- a/SiGotvime (Web)/Views/Blog/Index.cshtml
+++ b/SiGotvime (Web)/Views/Blog/Index.cshtml
@@ -93,10 +93,7 @@
                     <li><a href="#">Sit amet</a></li>
                 </ul>
             </div>
-            <div class="widget">
-                <h3>Advertisment</h3>
-                <a href="#"><img src="images/img.jpg" alt="" /></a>
-            </div>
+            @Html.Action("Advertisments", "Home")
         </aside>
         <!--//right sidebar-->
     </div>
