- Fixed register error; Approve Recipes;

--- a/SiGotvime (Web)/Views/Shared/_SideCategoriesBlocks.cshtml
+++ b/SiGotvime (Web)/Views/Shared/_SideCategoriesBlocks.cshtml
@@ -6,11 +6,11 @@
         <li class="dark"><a href="@Url.Action("Category", "Recipe", new { id = 155 })" title="Десерти"><i class="ico i-deserts"></i> <span>Десерти</span></a></li>
 
         <li class="medium"><a href="@Url.Action("Category", "Recipe", new { id = 180 })" title="Јајца"><i class="ico i-eggs"></i> <span>Јајца</span></a></li>
-        <li class="dark"><a href="@Url.Action("Category", "Recipe", new { id = 175 })" title="МАКЕДОНСКА ТРАДИЦИОНАЛНА ">@*<i class="ico i-equipment"></i>*@<img src="~/Content/Icons/macedonia.png" width="40" class="ico" style="background-image:none!important;" /> <span style="font-size: 8.4px;">МАКЕДОНСКА ТРАДИЦИОНАЛНА</span></a></li>
+        <li class="dark"><a href="@Url.Action("Category", "Recipe", new { id = 175 })" title="МАКЕДОНСКА ТРАДИЦИОНАЛНА ">@*<i class="ico i-equipment"></i>*@<img src="~/Content/Icons/macedonia.png" class="ico" style="background-image:none!important;width:40px!important" /> <span style="font-size: 8.4px;">МАКЕДОНСКА ТРАДИЦИОНАЛНА</span></a></li>
         <li class="light">
             <a href="@Url.Action("Category", "Recipe", new { id = 162 })" title="Појадок">
                 @*<i class="ico i-events"></i>*@
-                <img src="~/Content/Icons/toasted.png" class="ico" width="40" style="background-image:none!important;" /> <span>Појадок</span>
+                <img src="~/Content/Icons/toasted.png" class="ico" style="background-image:none!important;width:40px!important;" /> <span>Појадок</span>
             </a>
         </li>
 
@@ -18,13 +18,13 @@
         <li class="light">
             <a href="@Url.Action("Category", "Recipe", new { id = 179 })" title="Студентски">
                 @*<i class="ico i-fitness"></i>*@
-                <img src="~/Content/Icons/student.png" class="ico" width="40" style="background-image:none!important;" /> <span>Студентски</span>
+                <img src="~/Content/Icons/student.png" class="ico" style="background-image:none!important;width:40px!important;" /> <span>Студентски</span>
             </a>
         </li>
         <li class="medium">
             <a href="@Url.Action("Category", "Recipe", new { id = 156 })" title="Главно Јадење">
                 @*<i class="ico i-healthy"></i>*@
-                <img src="~/Content/Icons/MainDish.png" class="ico" width="40" style="background-image:none!important;" /> <span>Главно Јадење</span>
+                <img src="~/Content/Icons/MainDish.png" class="ico" style="background-image:none!important;width:40px!important;" /> <span>Главно Јадење</span>
             </a>
         </li>
 
@@ -32,13 +32,13 @@
         @*<li class="medium">
             <a href="@Url.Action("Category", "Recipe", new { id = 181 })" title="Mexican">
                 @*<i class="ico i-mexican"></i>
-                <img src="~/Content/Icons/malta.png" class="ico" width="40" style="background-image:none!important;" /><span>МАЛТЕШКА КУЈНА</span>
+                <img src="~/Content/Icons/malta.png" class="ico" style="background-image:none!important;width:40px!important;" /><span>МАЛТЕШКА КУЈНА</span>
             </a>
         </li>*@
         <li class="medium">
             <a href="@Url.Action("Category", "Recipe", new { id = 157 })" title="Паста">
                 @*<i class="ico i-mexican"></i>*@
-                <img src="~/Content/Icons/spaghetti3.png" class="ico" width="40" style="background-image:none!important;" /><span>Паста</span>
+                <img src="~/Content/Icons/spaghetti3.png" class="ico" style="background-image:none!important;width:40px!important;" /><span>Паста</span>
             </a>
         </li>
         <li class="dark"><a href="@Url.Action("Category", "Recipe", new { id = 177 })" title="Пица"><i class="ico i-pizza"></i> <span>Пица</span></a></li>
@@ -47,23 +47,23 @@
             <a href="@Url.Action("Category", "Recipe", new { id = 172 })" title="Телешко Месо">
                 @*<i class="ico i-kids"></i>*@
 
-                <img src="~/Content/Icons/telesko.png" class="ico" width="40" style="background-image:none!important;" />
+                <img src="~/Content/Icons/telesko.png" class="ico" style="background-image:none!important;width:40px!important;" />
                 <span>Телешко Месо</span>
             </a>
     </li>
     <li class="dark">
         <a href="@Url.Action("Category", "Recipe", new { id = 167 })" title="Пилешко Месо">
             @*<i class="ico i-meat"></i>*@
-            <img src="~/Content/Icons/chicken.png" class="ico" width="40" style="background-image:none!important;" /><span>Пилешко Месо</span>
+            <img src="~/Content/Icons/chicken.png" class="ico" style="background-image:none!important;width:40px!important;" /><span>Пилешко Месо</span>
         </a>
     </li>
     <li class="light"><a href="@Url.Action("Category", "Recipe", new { id = 176 })" title="Мезиња">@*<i class="ico i-snacks"></i>*@
-                          <img src="~/Content/Icons/meze.png" class="ico" width="40" style="background-image:none!important;" /> <span>Мезиња</span></a></li>
+                          <img src="~/Content/Icons/meze.png" class="ico" style="background-image:none!important;width:40px!important;" /> <span>Мезиња</span></a></li>
 
     <li class="dark"><a href="@Url.Action("Category", "Recipe", new { id = 168 })" title="Салати"><i class="ico i-salads"></i> <span>Салати</span></a></li>
     <li class="light"><a href="@Url.Action("Category", "Recipe", new { id = 164 })" title="Супи">@*<i class="ico i-storage"></i>*@ 
-                          <img src="~/Content/Icons/supa.png" class="ico" width="40" style="background-image:none!important;" /><span>Супи</span></a></li>
+                          <img src="~/Content/Icons/supa.png" class="ico" style="background-image:none!important;width:40px!important;" /><span>Супи</span></a></li>
     <li class="medium"><a href="@Url.Action("Category", "Recipe", new { id = 163 })" title="Сосови">@*<i class="ico i-vegetarian"></i>*@
-                           <img src="~/Content/Icons/sauce6.png" class="ico" width="40" style="background-image:none!important;" /> <span>Сосови</span></a></li>
+                           <img src="~/Content/Icons/sauce6.png" class="ico" style="background-image:none!important;width:40px!important;" /> <span>Сосови</span></a></li>
 </ul>
 </div>
