--- a/SiGotvime (Web)/Views/Recipe/GetRecipe.cshtml
+++ b/SiGotvime (Web)/Views/Recipe/GetRecipe.cshtml
@@ -1,6 +1,17 @@
 ﻿@model SiGotvime.Data.Models.Recipe
 @using SiGotvime.Utilities
 
+@functions{
+    string CreateShortIngredientName(string name)
+    {
+        if(name.Length>15)
+        {
+            return name.Substring(0, 12) + "...";
+        }
+        return name;
+    }
+}
+
 @{
     ViewBag.Title = Model.Title;
     List<string> steps = new List<string>();
@@ -16,6 +27,7 @@
             {
                 tempSteps[i - 1] = tempSteps[i - 1].Substring(2);
             }
+            tempSteps[i - 1] = tempSteps[i - 1].TrimStart('.');
         }
         steps.AddRange(tempSteps);
     }
@@ -168,28 +180,28 @@
                                         {
                                             if (selectedIngredients.Contains(item.Ingredient.ID))
                                             {
-                                                <img src="~/images/Status/678134-sign-check-128.png" data-toggle="tooltip" data-placement="top" title="Ја имате оваа состојка" style="width:20px;position:absolute;left:4px;margin-top:-45px;" />
+                                                <img src="~/images/Status/678134-sign-check-128.png" data-toggle="tooltip" data-placement="left" title="Ја имате оваа состојка" style="width:20px;position:absolute;left:4px;margin-top:-45px;" />
                                             }
                                             else
                                             {
-                                                <img src="~/images/Status/678069-sign-error-128.png" data-toggle="tooltip" data-placement="top" title="Ја немате оваа состојка" style="width:20px;position:absolute;left:4px;margin-top:-45px;" />
+                                                <img src="~/images/Status/678069-sign-error-128.png" data-toggle="tooltip" data-placement="left" title="Ја немате оваа состојка" style="width:20px;position:absolute;left:4px;margin-top:-45px;" />
                                             }
                                         }
                                     </dt>
                                 }
                                 else
                                 {
-                                    <dt class="justifyIngredient">
-                                        @item.Quantity
+                                    <dt class="justifyIngredient" data-toggle="tooltip" data-placement="top" title="@item.Quantity">
+                                        @CreateShortIngredientName(item.Quantity)
                                         @if (selectedIngredients.Any())
                                         {
                                             if (selectedIngredients.Contains(item.Ingredient.ID))
                                             {
-                                                <img src="~/images/Status/678134-sign-check-128.png" data-toggle="tooltip" data-placement="top" title="Ја имате оваа состојка" style="width:20px;position:absolute;left:4px;margin-top:-45px;" />
+                                                <img src="~/images/Status/678134-sign-check-128.png" data-toggle="tooltip" data-placement="left" title="Ја имате оваа состојка" style="width:20px;position:absolute;left:4px;margin-top:-45px;" />
                                             }
                                             else
                                             {
-                                                <img src="~/images/Status/678069-sign-error-128.png" data-toggle="tooltip" data-placement="top" title="Ја немате оваа состојка" style="width:20px;position:absolute;left:4px;margin-top:-45px;" />
+                                                <img src="~/images/Status/678069-sign-error-128.png" data-toggle="tooltip" data-placement="left" title="Ја немате оваа состојка" style="width:20px;position:absolute;left:4px;margin-top:-45px;" />
                                             }
                                         }
                                     </dt>
@@ -255,42 +267,54 @@
         <!--right sidebar-->
         <aside class="sidebar one-fourth wow fadeInRight">
             @*<div class="widget nutrition">
-                    <h3>Nutrition facts <span>(per serving)</span></h3>
-                    <table>
-                        <tr>
-                            <td>Calories </td>
-                            <td>505</td>
-                        </tr>
-                        <tr>
-                            <td>Protein</td>
-                            <td>59g</td>
-                        </tr>
-                        <tr>
-                            <td>Carbs</td>
-                            <td>59g</td>
-                        </tr>
-                        <tr>
-                            <td>Fat</td>
-                            <td>29g</td>
-                        </tr>
-                        <tr>
-                            <td>Saturates</td>
-                            <td>17g</td>
-                        </tr>
-                        <tr>
-                            <td>Fibre</td>
-                            <td>2g</td>
-                        </tr>
-                        <tr>
-                            <td>Sugar</td>
-                            <td>44g</td>
-                        </tr>
-                        <tr>
-                            <td>Salt</td>
-                            <td>0.51g</td>
-                        </tr>
-                    </table>
-                </div>*@
+                <h3>Nutrition facts <span>(per serving)</span></h3>
+                <table>
+                    <tr>
+                        <td>Calories </td>
+                        <td>505</td>
+                    </tr>
+                    <tr>
+                        <td>Protein</td>
+                        <td>59g</td>
+                    </tr>
+                    <tr>
+                        <td>Carbs</td>
+                        <td>59g</td>
+                    </tr>
+                    <tr>
+                        <td>Fat</td>
+                        <td>29g</td>
+                    </tr>
+                    <tr>
+                        <td>Saturates</td>
+                        <td>17g</td>
+                    </tr>
+                    <tr>
+                        <td>Fibre</td>
+                        <td>2g</td>
+                    </tr>
+                    <tr>
+                        <td>Sugar</td>
+                        <td>44g</td>
+                    </tr>
+                    <tr>
+                        <td>Salt</td>
+                        <td>0.51g</td>
+                    </tr>
+                </table>
+            </div>*@
+            @if (User.Identity.IsAuthenticated && Env.IsInRole(Constants.UserRoles.Administrator))
+            {
+                if (!Model.Approved)
+                {
+                    <div class="alert alert-success center bootstrap-item" role="alert"><a href="@Url.Action("ApproveRecipe", "Admin", new { id = Model.ID,approved=true})" style="color:white;">Одобри</a></div>
+                }
+                else
+                {
+                    <div class="alert alert-danger center bootstrap-item" role="alert"><a href="@Url.Action("ApproveRecipe", "Admin", new { id = Model.ID,approved=false})" style="color:white;">Забрани</a></div>
+                }
+            }
+
             @if (User.Identity.IsAuthenticated)
             {
                 <div class="alert alert-danger center bootstrap-item" role="alert"><a href="javascript:void(0)" id="planinng" style="color:white;" class="editableWhite" data-title="Планирај за датум" data-type="date">Планирај</a></div>
@@ -337,6 +361,9 @@
 
             @Html.Action("Advertisments", "Home")
         </aside>
+
+
+
         <!--//right sidebar-->
     </div>
     <!--//row-->
