--- a/SiGotvime (Web)/Views/Shared/_Layout.cshtml
+++ b/SiGotvime (Web)/Views/Shared/_Layout.cshtml
@@ -1,4 +1,4 @@
-﻿    <!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html>
 <head>
     <meta charset="utf-8">
@@ -66,7 +66,17 @@
                             </ul>*@
                     </li>
                     <li id="contact"><a href="@Url.Action("Contact","Home")" title="Contact"><span>Контакт</span></a></li>
+                    @if (User.Identity.IsAuthenticated && Env.IsInRole(Constants.UserRoles.Administrator))
+                    {
+                        <li>
+                            <a href="javascript:void(0)"><span>Аминистратор</span></a>
+                            <ul>
+                                <li><a href="@Url.Action("UnApprovedRecipes","Admin")" title="Неодобрени рецепти">Неодобрени Рецепти</a></li>
+                            </ul>
+                        </li>
+                    }
                 </ul>
+
             </nav>
 
             <nav class="user-nav" role="navigation">
@@ -121,9 +131,9 @@
                     <h5>Ви треба помош?</h5>
                     <p>Контактирајте не!</p>
                     <p>
-                        <strong style="color:#FF7A73">Контакт: </strong><a href="javascript:void(0)">contact@sigotvime.mk</a><br/>
-                        <strong style="color:#FF7A73">Маркетинг: </strong><a href="javascript:void(0)">marketing@sigotvime.mk</a><br />   
-                        <strong style="color:#FF7A73">За ваши рецепти: </strong><a href="javascript:void(0)">recept@sigotvime.mk</a><br />      
+                        <strong style="color:#FF7A73">Контакт: </strong><a href="javascript:void(0)">contact@sigotvime.mk</a><br />
+                        <strong style="color:#FF7A73">Маркетинг: </strong><a href="javascript:void(0)">marketing@sigotvime.mk</a><br />
+                        <strong style="color:#FF7A73">За ваши рецепти: </strong><a href="javascript:void(0)">recept@sigotvime.mk</a><br />
                     </p>
                 </article>
                 <article class="one-fourth">
