--- a/SiGotvime (Web)/Views/User/_UserBlogPosts.cshtml
+++ b/SiGotvime (Web)/Views/User/_UserBlogPosts.cshtml
@@ -39,7 +39,7 @@
 }
 
 <div class="entries row">
-    @for (int j = 0; j < additional; j++)
+    @for (int j = rows*3; j < rows*3+additional; j++)
     {
         {
 
