--- a/SiGotvime (Web)/Views/User/_UserFavouriteRecipes.cshtml
+++ b/SiGotvime (Web)/Views/User/_UserFavouriteRecipes.cshtml
@@ -35,7 +35,7 @@
 }
 
 <div class="entries row">
-    @for (int i = 0; i < additional; i++)
+    @for (int i = rows*3; i < rows*3+additional; i++)
     {
 
         
